2011-08-23  Adam Barth  <abarth@webkit.org>

        WebSearchableFormData crashes when given a detached HTMLFormElement
        https://bugs.webkit.org/show_bug.cgi?id=66831

        Reviewed by Dimitri Glazkov.

        We need to null-check the Frame.

        * src/WebSearchableFormData.cpp:
        (HTMLNames::GetFormEncoding):
        * tests/WebFrameTest.cpp:
        (WebKit::TEST_F):
        * tests/data/form.html: Added.

2011-08-23  Iain Merrick  <husky@google.com>

        [chromium] Make WebGL context current before querying for extensions
        https://bugs.webkit.org/show_bug.cgi?id=66788

        We're making changes on the Chromium side for threaded compositing that
        will require makeContextCurrent to be called on the appropriate thread
        before any other GL calls.

        In line with other GraphicsContext3D implementations, we do this
        implicitly. This is the minimum change that makes WebGL compliant.

        Reviewed by Kenneth Russell.

        * src/GraphicsContext3DChromium.cpp:
        (WebCore::GraphicsContext3DInternal::initializeExtensions):

2011-08-23  Scott Byer  <scottbyer@chromium.org>

        ScrollAnimatorNone coasting implementation
        https://bugs.webkit.org/show_bug.cgi?id=66258

        Reviewed by James Robinson.

        * tests/ScrollAnimatorNoneTest.cpp:
        (MockScrollableArea::visibleHeight):
        (MockScrollableArea::visibleWidth):
        (ScrollAnimatorNoneTest::SavePerAxisData::SavePerAxisData):
        (ScrollAnimatorNoneTest::SavePerAxisData::operator==):
        (ScrollAnimatorNoneTest::SetUp):
        (ScrollAnimatorNoneTest::updateDataFromParameters):
        (ScrollAnimatorNoneTest::animateScroll):
        (ScrollAnimatorNoneTest::attackArea):
        (ScrollAnimatorNoneTest::releaseArea):
        (ScrollAnimatorNoneTest::coastCurve):
        (ScrollAnimatorNoneTest::curveTestInner):
        (TEST_F):

2011-08-23  James Robinson  <jamesr@chromium.org>
